--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config prod.config.js"
+    "build": "webpack --mode production",
+    "build-watch": "webpack --watch --mode production",
+    "dev": "webpack --mode development",
+    "start": "webpack --watch --mode=development"
   },
   "repository": {
     "type": "git",
@@ -17,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/RICKCOYL/Weather-App/issues"
   },
-  "homepage": "https://github.com/RICKCOYL/Weather-App#readme"
+  "homepage": "https://github.com/RICKCOYL/Weather-App#readme",
+  "devDependencies": {
+    "css-loader": "^5.0.2",
+    "style-loader": "^2.0.0"
+  }
 }
