--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,10 @@
+const $ = window.$;
 {
     "env": {
         "browser": true,
         "es6": true,
-        "jest": true
+        "jest": true,
+        "jquery": true
     },
     "parser": "babel-eslint",
     "parserOptions": {
