--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
+    "exports-loader": "^2.0.0",
     "style-loader": "^2.0.0",
+    "worker-loader": "^3.0.8",
     "xxxxx": "^1.0.3"
   }
 }
