--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "eslint-plugin-import": "^2.20.2",
     "exports-loader": "^2.0.0",
     "style-loader": "^2.0.0",
+    "stylelint": "^13.3.3",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.17.2",
     "worker-loader": "^3.0.8",
     "xxxxx": "^1.0.3"
   }
