--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   },
   "main": "index.js",
   "scripts": {
+    "build": "webpack --mode production",
     "build-watch": "webpack --watch --mode production",
     "dev": "webpack --mode development",
     "start": "webpack --watch --mode=development",
-    "start-node": "node server.js",
-    "heroku-postbuild": "webpack -p"
+    "start-node": "node server.js"
   },
   "repository": {
     "type": "git",
