--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "webpack --mode production",
     "build-watch": "webpack --watch --mode production",
     "start-watch": "webpack --watch --mode=development",
-    "dev": "node server.js",
+    "start": "node server.js",
     "heroku-postbuild": "echo Skip build on Heroku"
   },
   "repository": {
