--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   },
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
+    "start": "webpack --mode production",
     "build-watch": "webpack --watch --mode production",
     "start-watch": "webpack --watch --mode=development",
-    "start": "node server.js",
+    "build": "node server.js",
     "heroku-postbuild": "echo Skip build on Heroku"
   },
   "repository": {
