--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   },
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "ng build",
     "start": "node index.js",
     "build-watch": "webpack --watch --mode production",
     "start-watch": "webpack --watch --mode=development",
-    "dev": "node server.js"
+    "dev": "node server.js",
+    "heroku-postbuild": "ng build --prod"
   },
   "repository": {
     "type": "git",
