--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Weather-App",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "engines": {
     "node": "14.x"
   },
