--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "xxxxx": "^1.0.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "natives": "^1.1.6"
   },
   "heroku-run-build-script": true
 }
