--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node src/index.js",
     "build-watch": "webpack --watch --mode production",
     "start-watch": "webpack --watch --mode=development",
+    "build": "webpack",
     "dev": "node server.js"
   },
   "repository": {
