--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "Weather-App",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "engines": {
     "node": "14.x"
   },
@@ -41,6 +40,7 @@
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.17.2",
     "webpack": "^5.24.2",
+    "webpack-cli": "^4.5.0",
     "worker-loader": "^3.0.8",
     "xxxxx": "^1.0.3"
   },
