--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node dist/main.js",
     "build-watch": "webpack --watch --mode production",
     "start-watch": "webpack --watch --mode=development",
     "build": "webpack",
