--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
     "watch": "webpack --watch",
     "build": "webpack",
     "dev": "webpack --mode development"
