--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "server": "node server.js",
+    "start": "node src/index.js",
     "watch": "webpack --watch",
     "build": "webpack",
     "dev": "webpack --mode development"
