--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
   },
   "homepage": "https://github.com/RICKCOYL/Weather-App#readme",
   "devDependencies": {
+    "@babel/core": "^7.13.8",
+    "@babel/preset-env": "^7.13.8",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
     "css-loader": "^5.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
