--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node server.js",
-    "start": "node src/index.js",
+    "start": "webpack serve --open 'google-chrome'",
     "watch": "webpack --watch",
-    "build": "webpack",
-    "dev": "webpack --mode development"
+    "prod": "NODE_ENV=production webpack",
+    "dev": "webpack"
   },
   "repository": {
     "type": "git",
