--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "build": "webpack",
-    "dev": "webpack --mode development"
+    "build": "webpack --mode production",
+    "dev": "webpack --mode development",
+    "build-watch": "webpack --watch --mode production"
   },
   "repository": {
     "type": "git",
