--- a/package.json
+++ b/package.json
@@ -2,15 +2,11 @@
   "name": "Weather-App",
   "version": "1.0.0",
   "description": "![](https://img.shields.io/badge/Microverse-blueviolet)",
-  "engines": {
-    "yarn": "1.x"
-  },
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
-    "build": "webpack --mode production",
-    "dev": "webpack --mode development",
-    "build-watch": "webpack --watch --mode production"
+    "build": "webpack --mode development",
+    "watch": "webpack --progress --watch"
   },
   "repository": {
     "type": "git",
@@ -24,11 +20,8 @@
   },
   "homepage": "https://github.com/RICKCOYL/Weather-App#readme",
   "devDependencies": {
-    "@babel/core": "^7.13.8",
-    "@babel/preset-env": "^7.13.8",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^5.1.0",
+    "css-loader": "^5.1.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
@@ -39,8 +32,5 @@
     "stylelint-scss": "^3.17.2",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0"
-  },
-  "dependencies": {
-    "express": "^4.17.1"
   }
 }
