--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode development",
-    "watch": "webpack --progress --watch"
+    "watch": "webpack --progress --watch",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -32,5 +33,8 @@
     "stylelint-scss": "^3.17.2",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
