--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config prod.config.js",
+    "build": "webpack",
     "watch": "webpack --progress --watch",
     "start": "node src/index.js"
   },
