--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "![](https://img.shields.io/badge/Microverse-blueviolet)",
   "main": "server.js",
   "type": "module",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
