--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "server.js",
   "type": "module",
   "engines": {
-    "npm": "6.x"
+    "node": "14.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "watch": "webpack --progress --watch",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "heroku-postbuild": "echo Skip build on Heroku"
   },
   "repository": {
     "type": "git",
@@ -40,5 +41,6 @@
   },
   "dependencies": {
     "express": "^4.17.1"
-  }
+  },
+  "heroku-run-build-script": true
 }
