--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "watch": "webpack --progress --watch",
-    "start": "node src/index.js",
+    "start": "node dist/index.html",
     "heroku-postbuild": "echo Skip build on Heroku"
   },
   "repository": {
