--- a/package.json
+++ b/package.json
@@ -2,15 +2,10 @@
   "name": "Weather-App",
   "version": "1.0.0",
   "description": "![](https://img.shields.io/badge/Microverse-blueviolet)",
-  "main": "server.js",
-  "type": "module",
-  "engines": {
-    "node": "14.x"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "watch": "webpack --progress --watch",
+    "build": "webpack --mode production",
+    "dev": "webpack --watch --mode=development",
     "start": "node dist/index.html",
     "heroku-postbuild": "echo Skip build on Heroku"
   },
